# MoonBit-Code-JAM-2025

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  awards.json  final.json  package-lock.json  package.json
.github/: pull_request_template.md
src/: build.mts  index.html
src/template/: index.html
teams/: 1313404-大一累死了-重生之我是杨过逃出绝情谷
teams/0x0-MoonBit官方-恐怖吃豆人/: README.md
teams/0x0-MoonBit官方-方块游戏/: README.md
teams/1294950-hpKiller-森林塔防/: README.md
teams/1295793-LunaFlow-猫meme合成/: README.md
teams/1295802-404_NotFound-贪吃蛇/: README.md
teams/1295802-404_NotFound-贪吃蛇游戏/: README.md
teams/1297087-天地一！屋！大爱盟-Matchstick-Man-Battle/: README.md
teams/1300351-aaaaaa-minihero/: Dockerfile  README.md  build.sh  index.html  local-llm.py  moon.mod.json
teams/1301523-果壳超玩会-宝可MoonPokemoon/: README.md
teams/1301530-llm_game-双相迷宫/: README.md  构建指引.md
teams/1302212-FishLog-无光之界/: README.md
teams/1302912-苹果喵喵没有喵-meow_knight/: README.md
teams/1304666-冠军-鲲鹏之变/: README.md  构建指引.md
teams/1305554-Moon_Bird-flappybird/: README.md
teams/1305605-奇点-大道一念/: READEME.md  README.md  index.html
teams/1305683-一次不够买够五次-meowbloom/: README.md
teams/1306443-nonecares-细胞生命游戏/: README.md
teams/1306999-漆黑之羽如深渊相伴-赛博拾荒者(CyberScavenger)/: README.md
teams/1307208-我就问-忍者神蛙/: README.md
teams/1307783-不知道啊有茶歇就来了-铜偶戏/: README.md
teams/1307919+零号送货员+记忆大师--Color  master/: README.md
teams/1307919+零号送货员+记忆大师--Color忆 master/: README.md
teams/1313404-大一累死了-重生之我是杨过逃出绝情谷/artifact/main code/cpp/: CMakeLists.txt  common.h  fightsystem.cpp  main.cpp  movesystem.cpp  movesystem.h
(+1197 files in other folders)
